# scroll

./: .clang-format  .gitignore  CONTRIBUTING.md  README.ar.md  README.cs.md  README.de.md  README.dk.md  README.en.md  README.es.md  README.fr.md  README.ge.md  README.gr.md  README.hi.md  README.hu.md  README.ir.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nl.md  README.no.md  README.pl.md  README.pt.md  README.ro.md  README.ru.md  README.sv.md  README.tr.md  README.uk.md  README.zh-CN.md  README.zh-TW.md  TUTORIAL.md  config.in  meson.build  scroll.lua
common/: ipc-client.c  list.c  util.c
include/: ipc.h  list.h  util.h
sway/: commands.c  config.c  criteria.c  ipc-json.c  ipc-server.c  lock.c  lsan_suppressions.c  lua.c  main.c  meson.build  scroll-bar.5.scd  scroll-input.5.scd  scroll-ipc.7.scd  scroll-output.5.scd  scroll.5.scd  (+2 more)
tests/: conftest.py  interactive.sh  lsan.supp  meson.build  scrollipc.py  test_alignment.py  test_animation_offset.py  test_clients.py  test_crash_move.py  test_focused_inactive_null_crash.py  test_focused_inactive_uaf.py  test_fullscreen_move_uaf.py  test_geometry.py  test_leak_two_clients.py  test_lua_api.py  test_lua_error.py  test_lua_eval.py  test_lua_path.py  test_lua_safety.py  test_move_cleanup_crash.py  test_normal_exit.py  test_rapid_switch.py  test_scratchpad_geometry.py  test_shutdown_events.py  test_shutdown_lua_callbacks.py  test_space_aba.py  test_space_crash.py  test_swap.py  test_utils.py  test_workspace_animation_uaf.py  test_workspace_split_uaf.py
tests/clients/: wayland-client.c  x11-client.c
(+155 files in other folders)
